# OpenMP_MPI

./: CMakeLists.txt  lab4.cpp  lab6.cpp  openmp.h
MPI/: CMakeLists.txt  lab4.c  lab5.c  lab6.c  labs123.c  mpi_labs.h
OpenMP/: lab1.cpp  lab2.cpp  lab3.cpp  lab5.cpp  lab6.cpp  openmp.h
